send to hubspot

--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -591,8 +591,8 @@ body {
           width: 30.625rem;
           outline: none;
           border: none;
-          margin: 0 10px 0 10px;
-          padding: 0 15px 0 15px;
+          // margin: 0 5px 0 10px;
+          padding: 0 5px 0 5px;
           background-color: #eef3ff;
           color: $huntease-main;
           font-weight: $regular;
