--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -528,7 +528,7 @@ body {
   .Dashboard-container {
     height: 38.9375em;
     width: 73.125rem;
-    flex-wrap: wrap;
+    //flex-wrap: wrap;
     //background-color: white;
     //   border-radius: $border-radius-button;
     //box-shadow: $box-shadow;
