--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -189,6 +189,12 @@ $height-auth-inputs: 43px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
+.scroll-pickGuide {
+  margin-right: unset;
+  height: 25rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 
 .curs_pointer {
   cursor: pointer;
