--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -436,6 +436,8 @@ body {
         outline: 0;
         margin: 0;
         width: 87%;
+        height: 30px;
+        overflow-y: hidden;
       }
     }
 
@@ -593,6 +595,35 @@ body {
       background-color: white;
       border-radius: $border-radius-button;
       box-shadow: $box-shadow;
+
+      .meeting-list {
+        padding: 0 0 0 25px;
+        .mettingInfos {
+          width: 100%;
+          padding: 0px 0 0 50px;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          white-space: nowrap;
+
+          & .date {
+            font-size: 11px;
+          }
+          & .number {
+            font-size: 17px;
+          }
+        }
+        & h4 {
+          color: #ffb58d;
+          font-weight: $bold;
+          margin: 0;
+        }
+        & h5 {
+          color: $huntease-medium;
+          font-weight: $regular;
+          margin: 0;
+          padding: 5px 15px 0px 0;
+        }
+      }
     }
 
     .CallBloc {
