--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -203,6 +203,13 @@ $height-auth-inputs: 43px;
   overflow-x: hidden;
 }
 
+.scroll-topsales {
+  margin-right: unset;
+  height: 14.2rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
 .scroll-meeting {
   margin-right: unset;
   height: 14.2rem;
