--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -819,12 +819,13 @@ body {
 
     & .Save-changes-btn {
       position: absolute;
-      bottom: -30px;
-      right: 25px;
+      bottom: 1.5em;
+      right: 1.5625em;
     }
     .MyProfile {
       padding: 30px;
       width: 100%;
+      height: 36.625em;
       position: relative;
       & h5 {
         font-weight: $regular;
