--- a/src/assets/styles/miscs.scss
+++ b/src/assets/styles/miscs.scss
@@ -188,6 +188,13 @@ $height-auth-inputs: 43px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+.scroll-guides {
+  margin-right: unset;
+  height: 31.4rem;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
 .scroll-lead {
   margin-right: unset;
   height: 16.25rem;
