leads bloc fixes

--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -2029,7 +2029,7 @@ body {
         padding: 21px;
       }
       .edit {
-        width: 37px;
+        min-width: 37px;
         height: 37px;
         background-color: #e8edff;
         border-radius: 10px;
