--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -437,6 +437,7 @@ body {
       .Title {
         font-size: 1.3125em;
         color: $huntease-medium;
+        background-color: white;
         opacity: 0.5;
         font-weight: $light;
         font-family: $font;
