--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -1330,7 +1330,7 @@ body {
         color: white;
       }
       & input {
-        width: 250px;
+        width: 15.625rem;
         color: $huntease-medium;
         background-color: #0e33c3;
         margin-right: 5px;
