--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -2351,7 +2351,7 @@ body {
   }
 }
 .chooseGuidePopup {
-  padding: 30px;
+  padding: 30px 0 30px 30px;
   width: 46.0625rem;
   height: 29.5rem;
   display: inline-block;
@@ -2362,8 +2362,12 @@ body {
     color: $huntease-main;
     font-weight: $bold;
   }
+  & img {
+    padding: 0 30px 0 8px;
+  }
   .popupInner {
-    padding: 20px 0 0 0;
+    padding: 20px 20px 0 0;
+    width: 100%;
     .guidList {
       padding: 5px 0 5px 0;
       margin: 5px 0 5px 0;
