--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -2,7 +2,6 @@
 @import "./fonts.scss";
 @import "./miscs.scss";
 @import "./_mixins.scss";
-
 :root {
   --navbar-height: 41px;
   --navbar-main-height: 65px;
@@ -34,6 +33,7 @@ $shadow: 0px 1px 10px rgba(0, 0, 0, 0.08);
 $box-shadow: 0px 3px 17px rgba(0, 0, 0, 0.08);
 
 $height-auth-inputs: 43px;
+
 p {
   font-family: $font;
   font-size: 12px;
@@ -493,10 +493,54 @@ body {
       font-weight: $bold;
       line-height: 1.5;
     }
-    & input {
+    .react-tag-input {
+      background: #e8edff;
+      color: #333;
+      border: none;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+      margin: 5px 0 10px 0;
+    }
+    .react-tag-input__input {
+      background: transparent;
+      color: #333;
+    }
+    .react-tag-input__input::placeholder,
+    .react-tag-input__input:-moz-placeholder,
+    .react-tag-input__input:-ms-input-placeholder,
+    .react-tag-input__input::-moz-placeholder,
+    .react-tag-input__input::-webkit-input-placeholder {
+      color: #333; /* Input placeholder */
+    }
+    .react-tag-input__tag {
+      background: $huntease-medium;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+    }
+    .react-tag-input__tag__remove {
+      background: $huntease-medium;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
+    }
+    .react-tag-input__tag__remove:before,
+    .react-tag-input__tag__remove:after {
+      background: #333; /* X icon in remove button */
+    }
+    .inputTag {
+      position: relative;
       width: 44.375rem;
       height: 2.5rem;
       margin: 0 0 15px 0;
+      background-color: $huntease-medium;
     }
   }
   .Guides {
