--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -343,6 +343,9 @@ body {
     & h5 {
       color: white;
       font-weight: $regular;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
   }
   & img {
@@ -1077,6 +1080,11 @@ body {
             color: $huntease-main;
             font-weight: bold;
             line-height: 2.3;
+            text-align: center;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+            width: 85%;
             margin: 0;
           }
           & img {
@@ -3055,6 +3063,48 @@ body {
     background-color: #f64c6f;
   }
 }
+
+.deleteTeamMemberopup {
+  width: 288px;
+  min-height: 226px;
+  background-color: white;
+  box-shadow: $box-shadow;
+  border-radius: 15px;
+  position: relative;
+  padding: 30px;
+  z-index: 100;
+  & input {
+    width: 212px;
+    height: 41px;
+    margin: 10px 0 10px 0;
+  }
+  & h4 {
+    color: $huntease-titles;
+    font-weight: $bold;
+    text-align: center;
+  }
+  & p {
+    color: $huntease-medium;
+    font-weight: $regular;
+    text-align: center;
+  }
+
+  & .Change-profile-btn {
+    font-weight: $regular;
+    background-color: white;
+    width: 212px;
+    height: 41px;
+    color: $huntease-main;
+    margin: 5px 0 5px 0;
+    font-size: 14px;
+    box-shadow: $box-shadow;
+  }
+  & .decline {
+    color: white;
+    background-color: #f64c6f;
+  }
+}
+
 .error {
   background-image: url("../img/mainback.svg");
   background-size: cover;
