--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -474,6 +474,7 @@ body {
         height: 2.5em;
         padding: 5px 0 0 0;
         overflow-y: hidden;
+        overflow-x: hidden;
         cursor: text;
       }
       .optionDrag {
