--- a/src/assets/styles/hutease.refactored.scss
+++ b/src/assets/styles/hutease.refactored.scss
@@ -171,7 +171,7 @@ body {
     font-size: 14.5px;
   }
   @include desktop-md {
-    font-size: 15.5px;
+    font-size: 14.5px;
   }
 
   @include desktop-xs {
@@ -1099,8 +1099,8 @@ body {
   .Settings-navigation {
     margin: 0 15px 0 15px;
     .settings-item {
-      width: 170px;
-      height: 54px;
+      width: 10.625rem;
+      height: 3.375rem;
       border-radius: 15px 15px 0 0;
       background-color: white;
       margin: 0 0 -15px 5px;
